courses/430_programming-languages/assignment-4/tests/error/error05.sml
val prog =
  PROGRAM
    {decls=[],
     stmts=[ST_EXP
              {exp=EXP_BINARY
                     {lft=EXP_NUM 2,opr=BOP_DIVIDE,rht=EXP_BOOL false}}]}
  : program
;
